WTCheckpointThread throws LockTimeout when 'failNonIntentLocksIfWaitNeeded' is enabled and the CheckpointLock is held by another thread

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 4.3.3
    • Affects Version/s: None
    • Component/s: Storage
    • None
    • Fully Compatible
    • ALL
    • Execution Team 2019-12-16
    • 48
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      The 'failNonIntentLocksIfWaitNeeded' fail point will immediately throw a LockTimeout exception even if the deadline is set to Date_t::max() when the WTCheckpointThread cannot immediately acquire the CheckpointLock because another thread is holding it.

      This is only happening on the fuzzer because it enables that fail point.

            Assignee:
            Gregory Wlodarek
            Reporter:
            Gregory Wlodarek
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: